Mon Feb  4 10:06:49 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c: gtk-double-click-time,
	not gtk-double-click-timeout. (#70501)

2002-02-04  Havoc Pennington  <hp@pobox.com>

	* gtk/gtksignal.c (gtk_signal_connect_while_alive): 
	(gtk_signal_connect_object_while_alive): rename 
	"signal" arg to "name" to avoid compiler warnings
	about shadowing signal(). #70453

2002-02-03  Anders Carlsson  <expander-master@gtk.org>

	* gtk/gtkstyle.c (gtk_default_draw_expander): Add 
	flipping support to the expanders.

Sat Feb  2 21:54:01 2002  Owen Taylor  <otaylor@redhat.com>

	RC file lookup improvements (#68234, suggestions
	from Matthias Clasen.)

	* gtk/gtkrc.c (gtk_rc_parse_file): Look for the 
	locale suffix variants (gtkrc.en_US, gtkrc.en) for
	all RC files we parse, not just the default RC
	files.

	* gtk/gtkrc.c (gtk_rc_parse_default_files): Remove
	support for charset specific RC files.

Sat Feb  2 20:16:04 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenushell.c (_gtk_menu_shell_select_first): 
	Non-exported _gtk_menu_select_first() function that
	selects the first item of the menu in a standard
	way. (Skipping tearoffs.)

	* gtk/gtkmenushell.c gtk/gtkentry.c gtk/gtktextview.c
	gtkmenuitem.c: Use _gtk_menu_shell_select_first().

	* gtk/gtkmenuitem.c (gtk_real_menu_item_select): Remember
	if we are starting the timeout from a keypress so
	we can set menushell->ignore_enter properly.

	* gtk/gtknotebook.c (focus_child_in): Return something
	meaningful if there are no children.

	* gtk/gtkmenu.c (gtk_menu_key_press): Fix precendence
	problem.

Sat Feb  2 19:15:42 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_popup): Fix some bugs in
	the determination of xgrab_shell.

Sat Feb  2 17:43:00 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_grab_focus): Add a GtkSetting
	(gtk-entry-select-on-focus) controlling whether the
	contents of an entry are selected on focus in.
